Add functions and function calls