@@ -50,9 +50,6 @@
                     <source>17</source>
                     <target>17</target>
                     <release>17</release>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
                   </configuration>
             </plugin>
             <plugin>
